fixing fabric bg overflowing

--- a/src/scss/includes/single-page.scss
+++ b/src/scss/includes/single-page.scss
@@ -1,10 +1,15 @@
 ._single-page {
     main {
         padding-bottom: 100px;
+        @media (max-width: $smallPhone + px) {
+            padding-bottom: 0;
+        }
     }
     section {
         @include avalue("padding-top", 60, 10);
         @include avalue("padding-bottom", 60, 10);
+        max-width: 100%;
+        overflow-x: clip;
     }
     // .special-event__container
     &__container {
@@ -45,7 +50,7 @@
         }
     }
     &__slider {
-        margin-top: 60px;
+        // margin-top: 60px;
         margin-bottom: 60px;
         max-width: none;
         // outline: 1px solid red;
