--- a/src/scss/includes/start.scss
+++ b/src/scss/includes/start.scss
@@ -3,8 +3,8 @@
     position: relative;
     padding-bottom: 120px;
     @media (max-width: $smallPhone + px) {
-        margin-top: 80px;
-        padding-bottom: 80px;
+        margin-top: 50px;
+        padding-bottom: 50px;
     }
     &::before {
         content: "";
@@ -12,7 +12,7 @@
         top: 0%;
         left: 50%;
         width: 100%;
-        height: 150%;
+        height: 100%;
         z-index: -2;
         transform: translate(-50%, -25%);
         background: center top no-repeat url(../../img/start/fabric-bg-2.jpg);
@@ -100,7 +100,7 @@
 ._single-page {
     .start {
         &::before {
-            transform: translate(-50%, -13%);
+            transform: translate(-50%, -7%);
         }
     }
 }
